--- a/Test.html
+++ b/Test.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>M294-Tab</title>
+    <link rel="icon" href="fortnite.png">
+    <meta name="author" content="Timo Aepli">
+    <meta name="publisher" content="Timo Aepli">
+    <meta name="copyright" content="Timo Aepli">
+    <meta name="description"
+        content="Implementiert mittels vorgegebener Technologie und mit Hilfe eines existierenden Back-Ends ein Front-End einer interaktiven Webapplikation, welches die Verwaltung von Daten ermöglicht.">
+    <meta name="keywords" content="Frontend, einer, interaktiven, Webapplikation, realisieren">
+    <meta http-equiv="content-language" content="de">
+    <meta name="robots" content="index, follow">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons+Round" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons+Sharp" />
+    <link rel="stylesheet" href="test.css">
 </head>
+
 <body>
-    <p>cool</p>
-    <p>cool</p>
-    <p>is</p>
+    <h1 class="oswald-uniquifier">Titel</h1>
+
+    <!-- Hearts for each Material Icon stylesheet -->
+    <span class="material-symbols-outlined">favorite</span> <!-- Outlined Heart -->
+    <span class="material-icons">favorite</span> <!-- Standard Material Icon Heart -->
+    <span class="material-icons-outlined">favorite</span> <!-- Outlined Icon Heart -->
+    <span class="material-icons-two-tone">favorite</span> <!-- Two-Tone Icon Heart -->
+    <span class="material-icons-round">favorite</span> <!-- Round Icon Heart -->
+    <span class="material-icons-sharp">favorite</span> <!-- Sharp Icon Heart -->
+    <span class="two-tone-heart"></span>
+
 </body>
+
 </html>
