--- a/Tag3/insert.html
+++ b/Tag3/insert.html
@@ -10,10 +10,10 @@
 
 <script type="module">
 
-    import {getDataID, getData, renderData} from './app.js';
+    import { renderData} from './app.js';
 
-    getDataID(3);
-    getData();
+    // getDataID(3);
+    // getData();
     renderData();
 
 </script>
